[package]
name = "terminal_quest"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
sysinfo = "0.30"
device_query = "2.1"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify-rust = "4.10"
rand = "0.8"
toml = "0.8"